packages/webassemblyjs/test/fixtures/conversions/type-errors/demote/module.wast
(module (func (result f32) (f32.demote/f64 (i32.const 0))))
